fixed scroll issue on mobile

--- a/sass/ham.scss
+++ b/sass/ham.scss
@@ -65,6 +65,7 @@
 
 .mobile-nav.is-active {
     left: 0;
+    overflow-y: hidden;
 }
 
 .mobile-nav a {
