--- a/sass/style.scss
+++ b/sass/style.scss
@@ -120,6 +120,10 @@ html {
   font-family: $font;
 }
 
+html.is-active {
+  overflow-y: hidden;
+}
+
 body {
   margin: 0;
   width: 100vw;
